# DSA

./: README.md
DSA-lab1/: CMakeLists.txt  Matrix.cpp  Matrix.h
DSA-seminar1/: ADTBag.py  ADTIterator.py  main.py
DSA5-Lab/: CMakeLists.txt  SMMIterator.cpp  SMMIterator.h  SortedMultiMap.cpp  SortedMultiMap.h
IteratedList/: CMakeLists.txt  ExtendedTest.cpp  IteratedList.cpp  IteratedList.h  ListIterator.cpp  ListIterator.h  ShortTest.cpp
Lab2-DSA/: CMakeLists.txt  ExtendedTest.cpp  IndexedList.cpp  IndexedList.h  ListIterator.cpp  ListIterator.h
Lab3-DSA/: CMakeLists.txt  Set.cpp  Set.h  SetIterator.cpp  SetIterator.h  ShortTest.cpp
Lab4-DSA/: App.cpp  CMakeLists.txt  ExtendedTest.cpp  Map.cpp  Map.h  MapIterator.cpp  MapIterator.h  ShortTest.cpp
Lab4-bogdan/Lab4/: Bag.cpp  Bag.h  BagIterator.cpp  BagIterator.h  CMakeLists.txt  ExtendedTest.cpp
SetHashing/: CMakeLists.txt  ExtendedTest.cpp  Set.cpp  Set.h  SetIterator.cpp  SetIterator.h
